[gd_scene load_steps=4 format=3 uid="uid://cv3kq3uc0y50g"]

[ext_resource type="Script" path="res://player/attack_manager.gd" id="1_bcu2h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jscy1"]
size = Vector2(1920, 1080)

[sub_resource type="BoxMesh" id="BoxMesh_8ta25"]
size = Vector3(32, 8, 1)

[node name="AttackManager" type="Area2D"]
z_index = 1
collision_layer = 0
collision_mask = 2
script = ExtResource("1_bcu2h")

[node name="AttackArea" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jscy1")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="GunPlaceHolder" type="MeshInstance2D" parent="WeaponPivot"]
self_modulate = Color(0.413029, 0.475725, 0.550838, 1)
position = Vector2(44, 0)
mesh = SubResource("BoxMesh_8ta25")

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/GunPlaceHolder"]
unique_name_in_owner = true
position = Vector2(16, 0)

[node name="LaserOffset" type="Marker2D" parent="WeaponPivot/GunPlaceHolder/ShootingPoint"]
unique_name_in_owner = true
position = Vector2(50, 0)

[node name="LaserSight" type="Line2D" parent="WeaponPivot/GunPlaceHolder/ShootingPoint"]
unique_name_in_owner = true
top_level = true
points = PackedVector2Array(0, 0, 40, 0)
width = 3.0
default_color = Color(1, 0, 0, 1)

[node name="BulletFireRate" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
autostart = true

[connection signal="timeout" from="BulletFireRate" to="." method="_on_timer_timeout"]
